--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,12 @@
     <!-- Chat menu -->
     <string name="option_clear">Clear all messages</string>
 
+    <!-- Internet service -->
+    <string name="no_internet_connection">
+        Your device does not have Internet connection.
+        You need to access the Internet in order to run this service.
+    </string>
+
     <!-- Email service strings -->
     <string name="mail_welcome">
         <![CDATA[
