--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
     </string>
     <string name="translation_list_command">list</string>
     <string name="translation_fail">The translation service failed, please, try again.</string>
-    <string name="msg_copied">Mensaje copiado</string>
+    <string name="msg_copied">Message copied</string>
     <string name="configuration">Configuration</string>
     <string name="clear_all_chats">Clear all chats</string>
 
@@ -88,5 +88,6 @@
     <string name="fahrenheit">°F - Fahrenheit</string>
     <string name="celsius">°C - Celsius</string>
     <string name="setting_saved">Setting saved</string>
+    <string name="settings">Settings</string>
 
 </resources>
