--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!-- Chat menu -->
     <string name="option_clear">Clear all messages</string>
+    <string name="option_settings">Settings</string>
 
     <!-- Internet service -->
     <string name="no_internet_connection">
@@ -18,8 +19,11 @@
             valid@mail.com : subject<br />
             The email that you wan to send
         </i>
+        <br/><br/>
+        You are currently using <b>%1$s</b>
         ]]>
     </string>
+    <string name="no_mail_account">In order to use this service, first you need to configure your email account in the settings menu</string>
     <string name="no_subject">(No subject)</string>
     <string name="sent_mail">The email was sent</string>
     <string name="incorrect_mail_format">The email format is incorrect</string>
@@ -31,10 +35,10 @@
                <![CDATA[
         <b>Current weather in %1$s :</b><br />
         <b>· Description:</b> %2$s <br />
-        <b>· Temperature:</b> %3$s ºC<br />
-        <b>· Feels like:</b> %4$s Cº<br />
-        <b>· Minimum temperature:</b> %5$s Cº<br />
-        <b>· Maximum temperature:</b> %6$s Cº<br />
+        <b>· Temperature:</b> %3$s %8$s<br />
+        <b>· Feels like:</b> %4$s %8$s<br />
+        <b>· Minimum temperature:</b> %5$s %8$s<br />
+        <b>· Maximum temperature:</b> %6$s %8$s<br />
         <b>· Humidity:</b> %7$s <br />
         ]]>
     </string>
@@ -53,7 +57,6 @@
     <string name="translation_list_command">list</string>
     <string name="translation_fail">The translation service failed, please, try again.</string>
     <string name="msg_copied">Message copied</string>
-    <string name="configuration">Configuration</string>
     <string name="clear_all_chats">Clear all chats</string>
 
     <!-- Notes service strings -->
