Solución settings servicio de notas.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,5 +120,6 @@
     <string name="proceed">Proceed</string>
     <string name="all_messages_deleted">All messages deleted</string>
     <string name="mail_manager_service_error">There is a problem with the mail server or your user data is not correct</string>
+    <string name="no_settings_available">No settings available</string>
 
 </resources>
